fix big gap between text and yes and no button

--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ body {
 .buttons {
     display: flex;
     gap: 15px;
-    margin-top: auto;
+    margin-top: 10px;
     padding-bottom: 10px;
 }
 
